[package]
name = "mod_test"
version = "0.1.0"
authors = ["GinjaNinja32 <ginjaninja32@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

[dependencies]
rustbot = { path = "../rustbot" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
