[package]
name = "mod_weather"
version = "0.1.0"
authors = ["GinjaNinja32 <ginjaninja32@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["dylib"]

[dependencies]
rustbot = { path = "../rustbot" }
reqwest = "0.9.11"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"
chrono = "0.4.6"
lazy_static = "1.3.0"
toml = "0.4.10"
