[package]
name = "rustbot"
version = "0.1.0"
authors = ["GinjaNinja32 <ginjaninja32@gmail.com>"]
edition = "2018"

[[bin]]
name = "rustbot"
path = "src/main.rs"

[lib]
name = "rustbot"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
libloading = "0.6"
irc = { version = "0.13.6", default-features = false }
toml = "0.5"
bitflags = "1.0.4"
migrant_lib = { version = "0.29", features = ["d-postgres"] }
rayon = "1.0"
serenity = { version = "0.8", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
parking_lot = { version = "0.9", features = ["deadlock_detection"] }
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"
regex = "1.3"
rental = "0.5.4"
reqwest = { version = "0.10", features = ["blocking"] }
postgres = { version = "0.17", features = ["with-serde_json-1"] }
lazy_static = "1.3.0"
