[package]
name = "shared"
version = "0.1.0"
authors = ["GinjaNinja32 <ginjaninja32@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
irc = "0.13.6"
serenity = "0.5"
rusqlite = { version = "0.16.0", features = ["bundled"] }
reqwest = "0.9.11"
bitflags = "1.0.4"
parking_lot = { version = "0.7", features = ["deadlock_detection"] }
serde_json = "1.0.39"
